    * [**Детальніше про зміни в Atmosphere**](https://github.com/Atmosphere-NX/Atmosphere/releases)
* [**Оновлено**] [MissionControl 0.11.1](https://github.com/ndeadly/MissionControl) - підтримка 18.1.0
* [**Оновлено**] [hekate 6.2.0](https://github.com/CTCaer/hekate/) - підтримка 18.1.0

____

#### **RUS**:
**Теперь точно полная поддержка 18.1.0**

**745**:
* [**Добавлено**] [WorldDigest для tinfoil] - добавлен новый источник в tinfoil
* [**Исправлено**] [TegraExplorer 4.2.0pre](https://github.com/suchmememanyskill/TegraExplorer/releases/tag/4.2.0) - исправлена ошибка, которая приводила к зависанию при входе в EMMC

**744**:
* [**Добавлено**] [ghostshop for tinfoil] - добавлен новый источник в tinfoil
* [**Исправлено**] [TegraExplorer 4.2.0pre](https://github.com/suchmememanyskill/TegraExplorer/releases/tag/4.2.0) - исправлена ошибка 'reboot_ofw'
* [**Добавлено**] [kefir] Добавлена возможность обновить tinfoil через uberhand > packages > Settings

**743**:
* [**Обновлено**] [hekate 6.2.1](https://github.com/CTCaer/hekate/) - исправления
* [**Обновлено**] [TegraExplorer 4.2.0pre](https://github.com/suchmememanyskill/TegraExplorer/releases/tag/4.2.0) - исправлен скрипт вайпа, который должен решить проблему черного экрана после сброса на прошивках 17 и выше
* [**Добавлено**] [kefir] Добавлена поддержка консолей с 8GB DRAM (hekate > more configs > Kefir with 8GB DRAM)
* [**Добавлено**] [Semi-stock в hekate] Запрошено. Это обычный полусток. Также используется для лечения черного экрана после сброса на прошивках 17 и выше

**741**:
* [**Обновлено**] [kefir] - исправлена проблема разгона, которая случайно отключилась

**740**:
* [**Обновлено**] [Kefirosphere](https://github.com/rashevskyv/Kefirosphere) - похоже, наконец-то нет проблем с сигпатчами. Спасибо DB!
* [**Удалено**] [sys-patch] - похоже больше не нужен
* [**Обновлено**] [hekate 6.2.0 v4](https://github.com/CTCaer/hekate/) - исправления
* [**Обновлено**] [tinfoil 18](http://tinfoil.io/)

**739**: