@@ -774,6 +774,12 @@ hekate
 <h4 id="rus"><strong>RUS</strong>:</h4>
 <p><strong>Теперь точно полная поддержка 18.1.0</strong></p>
 
+<p><strong>746</strong>:</p>
+<ul>
+  <li>[<strong>Исправлено</strong>] [kefir] - режим для 8Гб работает полноценно для всех поддерживаемых систем - HOS, Android, Linux. Включается через Uberhand &gt; packages &gt; Settings</li>
+  <li>[<strong>Обновлено</strong>] <a href="https://github.com/o0Zz/sys-con/releases">sys-con 1.3.0</a> - переход на форк сис-кона</li>
+</ul>
+
 <p><strong>745</strong>:</p>
 <ul>
   <li>[<strong>Добавлено</strong>] [WorldDigest для tinfoil] - добавлен новый источник в tinfoil</li>
@@ -830,6 +836,12 @@ hekate
 
 <h4 id="eng"><strong>ENG</strong>:</h4>
 <p><strong>Now definitely full support for 18.1.0</strong></p>
+
+<p><strong>746</strong>:</p>
+<ul>
+  <li>[<strong>Fixed</strong>] [kefir] - 8GB mode works fully for all supported systems - HOS, Android, Linux. Can be enabled via Uberhand &gt; packages &gt; Settings</li>
+  <li>[<strong>Updated</strong>] <a href="https://github.com/o0Zz/sys-con/releases">sys-con 1.3.0</a> - switched to sys-con fork</li>
+</ul>
 
 <p><strong>745</strong>:</p>
 <ul>
