@@ -47,6 +47,10 @@ ____
 #### **RUS**:
 **Теперь точно полная поддержка 18.1.0**
 
+**746**:
+* [**Исправлено**] [kefir] - режим для 8Гб работает полноценно для всех поддерживаемых систем - HOS, Android, Linux. Включается через Uberhand > packages > Settings
+* [**Обновлено**] [sys-con 1.3.0](https://github.com/o0Zz/sys-con/releases) - переход на форк сис-кона
+
 **745**:
 * [**Добавлено**] [WorldDigest для tinfoil] - добавлен новый источник в tinfoil
 * [**Исправлено**] [TegraExplorer 4.2.0pre](https://github.com/suchmememanyskill/TegraExplorer/releases/tag/4.2.0) - исправлена ошибка, которая приводила к зависанию при входе в EMMC
@@ -86,6 +90,10 @@ ____
 
 #### **ENG**:
 **Now definitely full support for 18.1.0**
+
+**746**:
+* [**Fixed**] [kefir] - 8GB mode works fully for all supported systems - HOS, Android, Linux. Can be enabled via Uberhand > packages > Settings
+* [**Updated**] [sys-con 1.3.0](https://github.com/o0Zz/sys-con/releases) - switched to sys-con fork
 
 **745**:
 * [**Added**] [WorldDigest for tinfoil] - added a new source in tinfoil
